# MeshPad

./: .editorconfig  .gitignore  AGENTS.md  CHANGELOG.md  PLAN.md  README.md  ROADMAP.md  dev.ps1  pubspec.yaml  version.json.example
.github/workflows/: build-release.yml  ci.yml
apps/meshpad/: README.md  pubspec.yaml
apps/meshpad/android/: gradle.properties  key.properties.example
apps/meshpad/lib/: app.dart  main.dart
apps/meshpad/linux/: CMakeLists.txt
apps/meshpad/test/: apk_update_installer_test.dart  app_settings_store_test.dart  app_settings_test.dart  app_version_test.dart  composer_ctrl_enter_test.dart  device_icons_test.dart  github_device_auth_service_test.dart  note_bubble_test.dart  (+9 more)
apps/meshpad_server/: analysis_options.yaml  pubspec.yaml
docs/: ARCHITECTURE.md  DATA_LAYOUT.md  DEVELOPMENT.md  GIT_SYNC.md  HUB.md  LIBP2P.md  PLATFORMS.md  SECURITY.md  SYNC_WIRE.md  openapi.yaml
docs/ADR/: 0002-supported-platforms.md  0003-simplicity-lan-git.md  README.md
native/meshpad_p2p_native/: Cargo.toml  README.md
native/meshpad_p2p_native/src/: events.rs  ffi.rs  lib.rs  main.rs  p2p.rs  sidecar.rs  sidecar_api.rs  wire_attachment_store.rs  wire_batch.rs  wire_protocol.rs  wire_store.rs
native/meshpad_p2p_native/tests/: two_sidecar_http_wire.rs  two_sidecar_libp2p_mesh.rs
native/meshpad_p2p_sidecar/: README.md  pubspec.yaml
scripts/: _common.ps1  _logging.ps1  allow-meshpad-firewall.ps1  android-release-cert-sha256.txt  bootstrap.ps1  build-android.ps1  build-native-ffi-android.sh  build-native-ffi.ps1  build-native-ffi.sh  build-windows.ps1  clean-local.ps1  collect-lan-logs.ps1  collect-logs.ps1  connect-adb.ps1  deploy-hub.ps1  dev.ps1  extract-changelog-section.sh  hub-workspace-pubspec.yaml  install-android-apk.ps1  install-hub-ubuntu.sh  install-vs-atl.ps1  launch-emulator.ps1  meshpad-hub.service  package-windows-installer.ps1  read-app-version.ps1  run-dual-with-logs.ps1  run-flutter-device.ps1  run-server.ps1  run-web.ps1  run.ps1  setup-android-signing.ps1  setup.ps1  stream-dual-logs.ps1  test-run.ps1  verify-android-apk-signature.sh
scripts/windows/: meshpad.iss
(+144 files in other folders)
